--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,6 +3,44 @@
   box-sizing: border-box;
 }
 
+:root {
+    --blue: #375a7f;
+    --indigo: #6610f2;
+    --purple: #6f42c1;
+    --pink: #e83e8c;
+    --red: #E74C3C;
+    --orange: #fd7e14;
+    --yellow: #F39C12;
+    --green: #00bc8c;
+    --teal: #20c997;
+    --cyan: #3498DB;
+    --white: #fff;
+    --gray: #999;
+    --gray-dark: #303030;
+    --primary: #375a7f;
+    --secondary: #444;
+    --success: #00bc8c;
+    --info: #3498DB;
+    --warning: #F39C12;
+    --danger: #E74C3C;
+    --light: #999;
+    --dark: #303030;
+    --breakpoint-xs: 0;
+    --breakpoint-sm: 576px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 992px;
+    --breakpoint-xl: 1200px;
+    --font-family-sans-serif: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 body {
   margin: 0;
   font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -28,6 +66,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 h3, .h3 {
   font-size: 2rem;
+}
+
+h4, .h4 {
+  font-size: 1.40625rem;
 }
 
 h5, .h5 {
@@ -68,7 +110,7 @@ img {
 
 audio {
   width: 100%;
-  height: 40px;
+  height: 30px;
 }
 
 .d-flex {
@@ -427,16 +469,65 @@ button:not(:disabled),
   background-color: #00bc8c;
 }
 
-@media (min-width: 1200px) {
-  .container, .container-sm, .container-md, .container-lg, .container-xl {
-    max-width: 1140px;
+.bird-details {
+  display: flex;
+  padding: 1rem;
+  border: 1px solid #444;
+  width: 100%;
+}
+
+.card {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #303030;
+  background-clip: border-box;
+  border: 1px solid rgba(0,0,0,0.125);
+  border-radius: 0.25rem;
+}
+
+.instruction span {
+  display: block;
+}
+
+.card-body {
+  display: flex;
+  padding: 0;
+  flex-direction: row;
+  min-height: 173px;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+}
+
+.bird-details .bird-image {
+  width: 200px;
+  height: 155px;
+  border-radius: 10px;
+  object-fit: cover;
+  margin-right: 2rem;
+}
+
+.card-body .list-group {
+  width: calc(100% - 240px);
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
   }
 }
 
-@media (min-width: 992px) {
-  .container, .container-sm, .container-md, .container-lg {
-    max-width: 960px;
-  }
+.btn-next {
+  background-color: #00bc8c;
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
@@ -452,13 +543,15 @@ button:not(:disabled),
   }
 }
 
-@media (min-width: 576px) {
-  .container {
-    max-width: 540px;
+@media (min-width: 992px) {
+  .container, .container-sm, .container-md, .container-lg {
+    max-width: 960px;
   }
+}
 
-  .jumbotron {
-    padding: 4rem 2rem;
+@media (min-width: 1200px) {
+  .container, .container-sm, .container-md, .container-lg, .container-xl {
+    max-width: 1140px;
   }
 }
 
@@ -485,13 +578,26 @@ button:not(:disabled),
 
   .random-bird .bird-image {
     margin: 0 auto 25px;
-}
+  }
 }
 
 @media (max-width: 767px) {
   h1.display-3 {
     font-size: 3rem;
   }
+
+  .bird-details {
+    display: block;
+    margin-top: 40px;
+  }
 }
 
+@media (max-width: 992px) {
+  .card-body .list-group {
+    width: 100%;
+  }
 
+  .card-body {
+    flex-direction: column;
+  }
+}
