feat: add random bird (answer-section)

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -462,11 +462,11 @@ button:not(:disabled),
   background-color: #444;
 }
 
-.error {
+.error .li-btn{
   background-color: #d62c1a;
 }
 
-.success {
+.success .li-btn{
   background-color: #00bc8c;
 }
 
