--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -2,19 +2,34 @@
   box-sizing: border-box;
 }
 
+$block-bg-color: #303030;
+$body-color: #222;
+$border-color: #444;
+$border-radius: 0.3rem;
+$button-background: #038a8ef0;
+$button-active: #04c4caf5;
+$button-default-color: #444;
+$button-error-color: #d62c1a;
+$element-border: 1px solid $border-color;
+$text-color: white;
+
+@mixin  text-margin {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
 body {
   margin: 0;
   font-family: "Lato", "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 0.9375rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #fff;
-  background-color: #222;
+  color: $text-color;
+  background-color: $body-color;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
+  @include text-margin();
   font-weight: 500;
   line-height: 1.2;
 }
@@ -32,13 +47,11 @@ h5 {
 }
 
 p {
-  margin-top: 0;
-  margin-bottom: 1rem;
+  @include text-margin();
 }
 
 ol, ul {
-  margin-top: 0;
-  margin-bottom: 1rem;
+  @include text-margin();
   list-style-type: none;
 }
 
@@ -46,16 +59,10 @@ hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
   border: 0;
-  border-top: 1px solid rgba(0,0,0,0.1);
-  -webkit-box-sizing: content-box;
+  border-top: $element-border;
   box-sizing: content-box;
   height: 0;
   overflow: visible;
-}
-
-img {
-  vertical-align: middle;
-  border-style: none;
 }
 
 audio {
@@ -65,7 +72,7 @@ audio {
 }
 
 .d-flex {
-  display: flex !important;
+  display: flex;
 }
 
 .container {
@@ -81,7 +88,7 @@ audio {
   margin-top: .5rem;
   flex-direction: column;
   .logo {
-    background-image: url(../images/logo.svg);
+    background-image: url(../images/logo.png);
     width: 200px;
     height: 55px;
     background-size: contain;
@@ -104,7 +111,7 @@ audio {
   flex-wrap: wrap;
   padding: 0;
   margin-bottom: 25px;
-  border-radius: 5px;
+  border-radius: $border-radius;
   overflow: hidden;
 }
 
@@ -116,18 +123,18 @@ audio {
 .page-item {
   padding: 0.5rem 0.75rem;
   line-height: 1.25;
-  background-color: #00bc8c;
+  background-color: $button-background;
 }
 
 .page-item.active {
-  background-color: #00efb2;
+  background-color: $button-active;
 }
 
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #303030;
-  border-radius: 0.3rem;
+  background-color: $block-bg-color;
+  border-radius: $border-radius;
 }
 
 .display-3 {
@@ -136,7 +143,7 @@ audio {
 }
 
 .text-center {
-  text-align: center !important;
+  text-align: center;
 }
 
 .lead {
@@ -147,20 +154,13 @@ audio {
 .btn {
   width: 100%;
   margin: 25px 15px;
-  background-color: #303030;
-  border: 1px solid #444;
+  background-color: $block-bg-color;
+  border: $element-border;
   transition: .3s;
-  display: inline-block;
-  font-weight: 400;
-  color: #fff;
-  text-align: center;
-  vertical-align: middle;
+  color: $text-color;
   cursor: pointer;
-  user-select: none;
   padding: 0.375rem 0.75rem;
-  font-size: 0.9375rem;
-  line-height: 1.5;
-  border-radius: 0.25rem;
+  border-radius: $border-radius;
 }
 
 button {
@@ -175,29 +175,20 @@ button {
 }
 
 .btn-next {
-  background-color: #00bc8c;
-  cursor: pointer;
+  background-color: $button-background;
 }
 
 .random-bird {
   display: flex;
   padding: 1rem;
-  background-color: #303030;
+  background-color: $block-bg-color;
   margin-bottom: 25px;
-  border-radius: 0.3rem;
-  border: 1px solid #444;
+  border-radius: $border-radius;
+  border: $element-border;
   div {
     width: 100%;
     margin: 0;
   }
-}
-
-.random-bird .bird-image {
-  width: 200px;
-  height: 155px;
-  border-radius: 10px;
-
-  margin: 0;
 }
 
 .random-bird .list-group {
@@ -219,18 +210,18 @@ button {
 .list-group-item {
   display: block;
   padding: 0.75rem 1.25rem;
-  background-color: #303030;
-  border: 1px solid #444;
+  background-color: $block-bg-color;
+  border: $element-border;
 }
 
 .list-group-item:first-child {
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
+  border-top-left-radius: $border-radius;
+  border-top-right-radius: $border-radius;
 }
 
 .list-group-item:last-child {
-  border-bottom-left-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: $border-radius;
+  border-bottom-right-radius: $border-radius;
 }
 
 .random-bird .list-group-item {
@@ -262,7 +253,7 @@ button {
 }
 
 .bird-item:hover, .li-btn {
-  background-color: #444;
+  background-color: $button-default-color;
 }
 
 .li-btn {
@@ -274,38 +265,38 @@ button {
 }
 
 .default {
-  background-color: #444;
+  background-color: $button-default-color;
 }
 
 .error .li-btn{
-  background-color: #d62c1a;
+  background-color: $button-error-color;
 }
 
 .success .li-btn{
-  background-color: #00bc8c;
+  background-color: $button-background;
 }
 
 .bird-details {
   display: flex;
   padding: 1rem;
-  border: 1px solid #444;
+  border: $element-border;
   width: 100%;
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #303030;
+  background-color: $block-bg-color;
   background-clip: border-box;
-  border-radius: 0.25rem;
+  border-radius: $border-radius;
 }
 
 .bird-item {
   width: 100%;
   display: flex;
   align-items: baseline;
-  color: white;
+  color: $text-color;
   padding: 0.75rem 1.25rem;
-  background-color: #303030;
-  border: 1px solid #444;
+  background-color: $block-bg-color;
+  border: $element-border;
   cursor: pointer;
 }
 
@@ -321,10 +312,10 @@ button {
   flex: 1 1 auto;
 }
 
-.bird-details .bird-image {
+.bird-image {
   width: 200px;
   height: 155px;
-  border-radius: 10px;
+  border-radius: $border-radius;
   object-fit: cover;
   margin-right: 2rem;
 }
@@ -344,7 +335,7 @@ button {
 }
 
 @media (min-width: 768px) {
-  .container, .container-sm, .container-md {
+  .container {
     max-width: 720px;
   }
 
@@ -377,10 +368,6 @@ button {
 
   .random-bird .list-group {
     margin-left: 0;
-  }
-
-  .random-bird .bird-image {
-    margin: 0 auto 25px;
   }
 
   .random-bird .bird-image {
